Spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ a.contact:hover {
 }
 i {
   margin: 0 0 0 0;
-  padding: 2px 10px 2px 15px;
+  padding: 2px 10px 2px 13px;
 }
 i:hover {
   text-decoration: underline;
